--- a/package.json
+++ b/package.json
@@ -7,8 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "numeral": "^2.0.6",
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-native": "0.51.0",
+    "react-navigation": "^1.0.0-beta.21",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
