--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "rgb-hex": "^2.1.0"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
